:tada: HTML structure end

--- a/index.html
+++ b/index.html
@@ -16,14 +16,26 @@
     <nav>
         <h2>Navigation principale</h2>
         <ul>
-            <li><a href="#parcours">Parcours</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#about_me">À propos de moi</a></li>
-            <li><a href="#skills">Compétences</a></li>
+            <li>
+                <a href="#parcours">Parcours</a>
+            </li>
+            <li>
+                <a href="#portfolio">Portfolio</a>
+            </li>
+            <li>
+                <a href="#about">À propos de moi</a>
+            </li>
+            <li>
+                <a href="#skills">Compétences</a>
+            </li>
         </ul>
         <ul>
-            <li><a href="#reseaux">Mes Réseaux</a></li>
-            <li><a href="#">Contacter</a></li>
+            <li>
+                <a href="#reseaux">Mes Réseaux</a>
+            </li>
+            <li>
+                <a href="#">Contacter</a>
+            </li>
         </ul>
     </nav>
 </header>
@@ -36,41 +48,37 @@
             innovants
             et à évoluer dans le domaine du développement web.</p>
         <p class="cta"><a href="#">Contacter</a></p>
-        <figure>
-            <img src="src/img/IMG_1247.JPG" alt="photo Sam Requena" title="Photo de Sam Requena">
-        </figure>
-        <p>En savoir plus à propos de mes compétences</p>
-        <p id="roadToSkills">cliquer ici pour aller voir mes compétences</p>
+        <img src="src/img/IMG_1247.JPG" alt="photo Sam Requena" title="Photo de Sam Requena">
+        <p>Une façon de travailler qui plait au clients</p>
+        <p><a href="#">En apprendre d’avantages sur mes clients</a></p>
     </section>
     <section id="parcours">
         <h2>Mon parcours <span>Diplômes</span></h2>
-        <figure>
-            <img src="src/img/62ee86ad629f1872424dab04_man-suit-portfolio.svg"
-                 alt="Illustration d&apos;un personnage qui marche">
-        </figure>
-        <p id="go_comment">Que pensent mes clients ?</p>
-        <article class="card_diplomes">
+        <img src="src/img/62ee86ad629f1872424dab04_man-suit-portfolio.svg"
+             alt="Illustration d&apos;un personnage qui marche">
+        <p><a href="#">Mes compétences apprises</a></p>
+        <article class="parcours__card">
             <h3>Bachelier en techniques graphiques orientation - Web<span>Haute - Ecole de la Province de Liège</span>
             </h3>
-            <p class="desc">
+            <p class="parcours__card__desc">
                 Apprentissages du design web et de ses langages de codes, l&apos;utilisation de divers frameworks et
                 gestion
                 de bases de données
             </p>
         </article>
-        <article class="card_diplomes">
+        <article class="parcours__card">
             <h3>Bachelier en Écriture Multimédia <span>Haute - Ecole de la Province de Liège</span></h3>
-            <p class="desc">
+            <p class="parcours__card__desc">
                 Apprentissages dans le domaine de l&apos;UX mais également dans la prise de vues de photos et vidéos
                 ainsi
                 que leurs retouches et montages
             </p>
         </article>
-        <article class="card_diplomes">
+        <article class="parcours__card">
             <h3>Formation secondaire - option sciences et
                 mathématiques<span> Etablissement secondaire St - Roch Theux</span>
             </h3>
-            <p class="desc">
+            <p class="parcours__card__desc">
                 Apprentissages approfondis des sciences en général ainsi qu&apos;une pratique des mathématiques
                 récurrentes qui
                 m&apos;ont
@@ -89,7 +97,7 @@
             <img src="#" alt="Capture d&apos;écran de mon portfolio" title="Capture d&apos;écran de mon portfolio">
         </figure>
     </section>
-    <section id="about_me">
+    <section id="about">
         <h2>A propos de moi <span>La qualité de mon travail</span></h2>
         <p>Retrouvez la citation qui dicte ma façon de travailler ainsi que d’un retour client et de statistique lié son
             projet.</p>
@@ -98,15 +106,13 @@
             recommander mes services avec confiance et fiabilité.
         </blockquote>
         <figure>
-            <img src="#" alt="Photo de Sam Requena" title="Photo de Sam Requena">
+            <img src="./src/img/about_me.png" alt="Photo de Sam Requena" title="Photo de Sam Requena">
         </figure>
-        <div class="client_avis">
-            <figure>
-                <img src="./src/img/client.webp" alt="Photo de profil d'un client" title="Photo de profil d'un client">
-            </figure>
+        <div class="about__client_avis">
+            <img src="./src/img/client.webp" alt="Photo de profil d'un client" title="Photo de profil d'un client">
             <p>“Bon travail, mon site m’as permis de mieux me développer et également générer beaucoup plus de
                 revenus.”</p>
-            <p class="client_name">Tom Martin <span>client</span></p>
+            <p class="about__client_name">Tom Martin <span>client</span></p>
         </div>
         <dl>
             <dt>Prise de contact avec de nouveaux clients</dt>
@@ -114,7 +120,7 @@
             <dt>Bénéfice sur l’année</dt>
             <dd>12&percnt;</dd>
         </dl>
-        <p>En savoir plus sur moi</p>
+        <p>Vous avez des questions ?</p>
         <p><a href="#">En savoir plus sur moi</a></p>
     </section>
     <section id="skills">
@@ -152,7 +158,7 @@
                 dynamiques, assurant ainsi une contribution agile et proactive aux projets.
             </p>
         </article>
-        <p><a href="#parcours">Vous pouvez revoir mon parcours juste ici !</a></p>
+        <p><a href="#parcours">Revoir mon parcours juste ici !</a></p>
     </section>
     <section class="avis">
         <h2>Avis sur mon travail <span>3 avis de clients</span></h2>
@@ -189,12 +195,162 @@
             <img src="./src/img/alerte_portfolio.webp" alt="Illustration d'un personnage"
                  title="Illustation d'un personnage">
         </div>
-        <footer>
-            <section class="footer">
-
-            </section>
-        </footer>
     </section>
+    <section id="contact">
+        <h2>Me contacter <span>Formulaire</span></h2>
+        <p>Si vous souhaitez me poser une question ou me contacter afin qu’on puisse travailler sur un de vos
+            projets, n’hésitez pas à me contacter via ce formulaire.</p>
+        <img src="#" alt="Illustration">
+        <div class="contact__formulaire">
+            <form action="/" method="post">
+                <fieldset>
+                    <div class="firstname">
+                        <label for="firstname">Prénom</label>
+                        <input type="text" name="firstname" id="firstname" placeholder="Prénom">
+                    </div>
+                    <div class="nom">
+                        <label for="name">Nom</label>
+                        <input type="text" name="name" id="name" placeholder="Nom">
+                    </div>
+                    <div class="email">
+                        <label for="email">Email</label>
+                        <input type="text" name="email" id="email" placeholder="Email">
+                    </div>
+                    <div class="phone_number">
+                        <label for="number">Nom</label>
+                        <input type="text" name="number" id="number" placeholder="0471.01.01.01">
+                    </div>
+                    <div class="budget">
+                        <label for="budget">Budget</label>
+                        <select name="budget" id="budget">
+                            <option value="default" disabled selected>Choisir mon budget</option>
+                            <option value="under_5000">En dessous de 3.000€</option>
+                            <option value="3000_5000">Entre 3.000€ et 5.000€</option>
+                            <option value="5000_10000">Entre 5.000€ et 10.000€</option>
+                            <option value="more_10000">Plus de 10.000€</option>
+                            <option value="no_mention">Ne pas mentionner pour l'instant</option>
+                        </select>
+                    </div>
+                    <div class="message">
+                        <label for="message">Que voulez-vous me communiquer ?</label>
+                        <textarea name="message" id="message" cols="40" rows="1"></textarea>
+                    </div>
+                    <button type="submit">Envoyer</button>
+                </fieldset>
+            </form>
+            <p>Envie de voir de quoi je suis capable ?</p>
+            <p><a href="#"></a>Aller voir mon portfolio</p>
+        </div>
+        <div class="contact__footer">
+            <p>&copy; Curriculum Vitae</p>
+            <ul>
+                <li>
+                    <a href="#">Accueil</a>
+                </li>
+                <li>
+                    <a href="#">Sam</a>
+                </li>
+
+                <li>
+                    <a href="#">Requena</a>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <footer>
+        <section class="footer">
+            <h2>Sam Requena</h2>
+            <ul>
+                <li>
+                    <a href="#">Accueil</a>
+                </li>
+                <li>
+                    <a href="#">Portfolio</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Mon parcours</a>
+                </li>
+                <li>
+                    <a href="#">A propos de moi</a>
+                </li>
+                <li>
+                    <a href="#">Mes compétences</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Ressources</a>
+                </li>
+                <li>
+                    <a href="#">GTMetrix</a>
+                </li>
+                <li>
+                    <a href="#">W3C</a>
+                </li>
+                <li>
+                    <a href="#">WEB Aim</a>
+                </li>
+                <li>
+                    <a href="#">Dash</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Mon ordinateur</a>
+                </li>
+                <li>
+                    <a href="#">Mon club favoris</a>
+                </li>
+                <li>
+                    <a href="#">Ma marque</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">samrequena1510@gmail.com</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">&copy; Curriculum Vitae</a>
+                </li>
+                <li>
+                    <a href="#">Sam</a>
+                </li>
+
+                <li>
+                    <a href="#">Requena</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <img src="#" alt="Mon Github" title="Mon Github">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="#" alt="Mon instagram" title="Mon instagram">
+                    </a>
+                </li>
+            </ul>
+            <p>
+                Tous droits réservés. Aucune reproduction, distribution ou transmission du contenu de ce site n'est
+                autorisée sans permission écrite préalable.
+                Les informations présentes ici sont confidentielles et sont destinées exclusivement à un usage personnel
+                et professionnel.
+            </p>
+            <p>
+
+                Nous nous engageons à préserver la confidentialité de vos informations personnelles, telles que votre nom et votre adresse e-mail. Aucune de ces données ne sera partagée avec des tiers sans votre consentement explicite.
+            </p>
+            <p>
+                Ce site peut contenir des liens vers d'autres sites web, mais nous déclinons toute responsabilité quant à leurs pratiques de confidentialité.
+            </p>
+        </section>
+    </footer>
 </main>
 </body>
 </html>
