:tada: Structure BEM

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 </p>
             </article>
             <article class="skills__colonne2__items">
-                <h3 class="skills__colonne2__title" lang="en">>Soft skills</h3>
+                <h3 class="skills__colonne2__title" aria-level="3" lang="en">>Soft skills</h3>
                 <p class="skills__colonne2__text">
                     Doté de solides soft skills, je facilite la collaboration grâce à une communication claire et une
                     adaptabilité rapide. Ma créativité et mon sens de l'écoute renforcent les relations
